<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".event.EventDetailUserActivity">

    <!-- edu_head_row -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edu_head_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/edu_event_details_row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_edu_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"

            android:background="@drawable/rounded_button"
            android:text="Back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_edu_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="Event Details"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_edu_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_edu_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- edu_event_details_row -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edu_event_details_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/edu_head_row"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView_edu_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Event details are currently unavailable."
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textFacilityDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Facility information is currently unavailable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_edu_details" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- edu_user_details_row -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edu_user_details_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edu_event_details_row">

        <TextView
            android:id="@+id/textView_your_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Your Status: "
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_edu_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/textView_your_status"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonPosterView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"

            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_button"
            android:text="View Poster"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_your_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- edu_notification_row -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edu_notification_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edu_reg_unreg_row"
        app:layout_constraintStart_toStartOf="parent">

        <include
            layout="@layout/layout_entrant_event_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- edu_reg_unreg_row -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edu_reg_unreg_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/button_edu_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"

            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:text="Register"
            app:layout_constraintBottom_toTopOf="@+id/button_edu_unregister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_edu_unregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            android:layout_marginBottom="8dp"

            android:background="@drawable/rounded_button"
            android:text="Unregister"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_edu_reg" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
