<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/entrant_eventlist_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@+id/entrant_waitlisted_events_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>
